DTS-46813: fixed test cases